# currency_conversion

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  Untitled Diagram.drawio  docker-compose.yml  entrypoint.sh  env-file  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 7e0ca2c5a6a2_initial_migration.py  9ecdd5f10f6e_add_default_data_to_currencies.py  e5dcebb0833f_initial.py  fdd36af408ac_initial_migration.py
api_currency/: Dockerfile  pyproject.toml
api_currency/alembic/: env.py
api_currency/alembic/versions/: 9ecdd5f10f6e_add_default_data_to_currencies.py
api_currency/src/: bootstrap.py  config.py
api_currency/src/adapters/: orm.py  repository.py
api_currency/src/domain/: model.py
api_currency/src/entrypoints/: main.py  views.py
api_currency/src/external_service/: external_api.py
api_currency/src/service_layer/: handlers.py  messagebus.py  unit_of_work.py
api_currency/tests/: conftest.py
api_currency/tests/e2e/: api_client.py  test_api.py
api_currency/tests/integration/: test_external_api.py  test_repository.py  test_uow.py  test_views.py
api_currency/tests/unit/: test_handlers.py  test_model.py
api_gateway/config/: asgi.py  settings.py  urls.py  wsgi.py
src/: bootstrap.py  celery_app.py  celery_worker.py  config.py
src/adapters/: orm.py  repository.py
src/domain/: messages.py  model.py
src/entrypoints/: main.py  schemas.py  views.py
src/external_service/: external_api.py
src/service_layer/: handlers.py  messagebus.py  unit_of_work.py
src/services/: analysis_service.py  onnx_model.py
src/tasks/: task_handlers.py  tasks.py
tests/: conftest.py
tests/e2e/: api_client.py  test_api.py
tests/integration/: test_external_api.py  test_repository.py  test_uow.py  test_views.py
tests/unit/: test_handlers.py  test_model.py
